// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should limit displayed orgs to the first three 1`] = `
<div>
  <ul>
    <li
      key="bar"
    >
      <withRouter(OrganizationsShortListItem)
        onClick={[MockFunction]}
        organization={
          Object {
            "key": "bar",
            "name": "Bar",
          }
        }
      />
    </li>
    <li
      key="foo"
    >
      <withRouter(OrganizationsShortListItem)
        onClick={[MockFunction]}
        organization={
          Object {
            "key": "foo",
            "name": "Foo",
          }
        }
      />
    </li>
    <li
      key="kor"
    >
      <withRouter(OrganizationsShortListItem)
        onClick={[MockFunction]}
        organization={
          Object {
            "key": "kor",
            "name": "Kor",
          }
        }
      />
    </li>
  </ul>
  <div
    className="big-spacer-top"
  >
    <span
      className="big-spacer-right"
    >
      x_of_y_shown.3.4
    </span>
    <Link
      className="small"
      onClick={[MockFunction]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/account/organizations"
    >
      see_all
    </Link>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
<div>
  <ul>
    <li
      key="bar"
    >
      <withRouter(OrganizationsShortListItem)
        onClick={[MockFunction]}
        organization={
          Object {
            "key": "bar",
            "name": "Bar",
          }
        }
      />
    </li>
    <li
      key="foo"
    >
      <withRouter(OrganizationsShortListItem)
        onClick={[MockFunction]}
        organization={
          Object {
            "key": "foo",
            "name": "Foo",
          }
        }
      />
    </li>
  </ul>
</div>
`;
